# browser-agent

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
docs/: adding-a-task.md  architecture.md  fix-vulns-task.md  setup.md
src/: actions.py  agent.py  browser.py  cli.py  coder.py  server.py
src/tasks/: fix_vulns.py
