[project]
name = "browser-agent"
version = "0.2.0"
description = "Browser automation server for coding agents (Claude Code, Codex)"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49.0",
]

[project.scripts]
browser-agent = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
